@@ -6,8 +6,8 @@
   "build-depends": [
   ],
   "depends": [
-    "PDF::Content:ver<0.5.8+>",
-    "PDF:ver<0.4.6+>"
+    "PDF::Content:ver<0.6.1+>",
+    "PDF:ver<0.5.1+>"
   ],
   "description": "Minimal class for the creation and editing of PDF documents",
   "license": "Artistic-2.0",
