@@ -5,7 +5,7 @@ plan 2;
 use PDF::Lite;
 my PDF::Lite $pdf .= new;
 my PDF::Lite::Page $page = $pdf.add-page;
-my $header-font = $page.core-font( :family<Helvetica>, :weight<bold> );
+my $header-font = $pdf.core-font( :family<Helvetica>, :weight<bold> );
 
 unless try {require HTML::Canvas::To::PDF; 1} {
     skip-rest 'HTML::Canvas::To::PDF required to run canvas tests';
