@@ -1,6 +1,8 @@
 Revision history for PDF-Lite
 
 {{$NEXT}}
+   - Use PDF::Content 0.6.1 core font cache. Prefer core-font loading
+     at the PDF level.
 
 0.0.10  2022-04-02T10:49:20+13:00
    - Upload to zef ecosystem
